--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <h1>java script master</h1>
-    <a href="./01-javaScript-drum-kit/index-START.html"
-      >01 - JavaScript Drum Kit</a
-    >
+    <a class="a__f" href="./01-javaScript-drum-kit/index.html">
+      01 - JavaScript Drum Kit
+    </a>
   </body>
 </html>
