--- a/01-javaScript-drum-kit/index.html
+++ b/01-javaScript-drum-kit/index.html
@@ -18,6 +18,7 @@
   </head>
   <body>
     <section>
+      <a class="back-link" href="../index.html">&#8592; back</a>
       <ul class="key__list">
         <li data-key="65" class="key__item">
           <kbd>A</kbd>
