--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
       rel="stylesheet"
     />
     <title>JS Master</title>
-    <style>
-      body {
-        font-family: 'Noto Sans JP', sans-serif;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1>java script master</h1>
