--- a/index.html
+++ b/index.html
@@ -18,8 +18,30 @@
   </head>
   <body>
     <h1>java script master</h1>
-    <a class="a__f" href="./01-javaScript-drum-kit/index.html">
-      01 - JavaScript Drum Kit
-    </a>
+    <ul>
+      <li class="list__item">
+        <a class="a__f" href="./01-javaScript-drum-kit/index.html">
+          01 - JavaScript Drum Kit
+        </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./02-JS-and-CSS-Clock/index.html">
+          02 JS and CSS Cloc
+        </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./03-CSS-Variables/index.html">
+          03 CSS Variables
+        </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./calculator/index.html"> calculator </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./flip-clock-with-css-javascript/index.html">
+          flip clock with css javascript
+        </a>
+      </li>
+    </ul>
   </body>
 </html>
