--- a/index.html
+++ b/index.html
@@ -35,6 +35,11 @@
         </a>
       </li>
       <li class="list__item">
+        <a class="a__f" href="./04-array-cardio-day-1/index-START.html">
+          04 Array Cardio Day 1
+        </a>
+      </li>
+      <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> calculator </a>
       </li>
       <li class="list__item">
