--- a/index.html
+++ b/index.html
@@ -40,6 +40,11 @@
         </a>
       </li>
       <li class="list__item">
+        <a class="a__f" href="./5-flex-panel-gallery/index-START.html">
+          5 Flex Panel Gallery
+        </a>
+      </li>
+      <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> calculator </a>
       </li>
       <li class="list__item">
