--- a/index.html
+++ b/index.html
@@ -20,36 +20,39 @@
     <h1>java script master</h1>
     <ul>
       <li class="list__item">
-        <a class="a__f" href="./1-javaScript-drum-kit/index.html">
+        <a class="a__f" href="./01-javaScript-drum-kit/index.html">
           01 - JavaScript Drum Kit
         </a>
       </li>
       <li class="list__item">
-        <a class="a__f" href="./2-JS-and-CSS-Clock/index.html">
+        <a class="a__f" href="./02-js-and-css-clock/index.html">
           02 JS and CSS Cloc
         </a>
       </li>
       <li class="list__item">
-        <a class="a__f" href="./3-CSS-Variables/index.html">
+        <a class="a__f" href="./03-css-variables/index.html">
           03 CSS Variables
         </a>
       </li>
       <li class="list__item">
-        <a class="a__f" href="./4-array-cardio-day-1/index.html">
+        <a class="a__f" href="./04-array-cardio-day-1/index.html">
           04 Array Cardio Day 1
         </a>
       </li>
       <li class="list__item">
-        <a class="a__f" href="./5-flex-panel-gallery/index.html">
+        <a class="a__f" href="./05-flex-panel-gallery/index.html">
           5 Flex Panel Gallery
         </a>
       </li>
       <li class="list__item">
-        <a class="a__f" href="./calculator/index.html"> calculator </a>
+        <a class="a__f" href="./06-type-ahead/index.html"> 06 Type Ahead </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./calculator/index.html"> Calculator </a>
       </li>
       <li class="list__item">
         <a class="a__f" href="./flip-clock-with-css-javascript/index.html">
-          flip clock with css javascript
+          Flip Clock with CSS Java Script
         </a>
       </li>
     </ul>
