--- a/index.html
+++ b/index.html
@@ -41,11 +41,16 @@
       </li>
       <li class="list__item">
         <a class="a__f" href="./05-flex-panel-gallery/index.html">
-          5 Flex Panel Gallery
-        </a>
+          5 Flex Panel Gallery</a
+        >
       </li>
       <li class="list__item">
-        <a class="a__f" href="./06-type-ahead/index.html"> 06 Type Ahead </a>
+        <a class="a__f" href="./06-type-ahead/index.html">06 Type Ahead</a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./07-array-cardio-day-2/index.html">
+          07 - Array Cardio Day 2</a
+        >
       </li>
       <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> Calculator </a>
