--- a/index.html
+++ b/index.html
@@ -49,8 +49,13 @@
       </li>
       <li class="list__item">
         <a class="a__f" href="./07-array-cardio-day-2/index.html">
-          07 - Array Cardio Day 2</a
-        >
+          07 - Array Cardio Day 2
+        </a>
+      </li>
+      <li class="list__item">
+        <a class="a__f" href="./08-fun-with-html5-canvas/index.html">
+          08 - Fun with HTML5 Canvas
+        </a>
       </li>
       <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> Calculator </a>
