--- a/index.html
+++ b/index.html
@@ -58,6 +58,11 @@
         </a>
       </li>
       <li class="list__item">
+        <a class="a__f" href="./09-dev-tools-domination/index.html">
+          09 - Dev Tools Domination
+        </a>
+      </li>
+      <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> Calculator </a>
       </li>
       <li class="list__item">
