--- a/index.html
+++ b/index.html
@@ -63,6 +63,11 @@
         </a>
       </li>
       <li class="list__item">
+        <a class="a__f" href="./10-hold-shift-and-check-checkboxes/index.html">
+          10 - Hold Shift and Check Checkboxes
+        </a>
+      </li>
+      <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> Calculator </a>
       </li>
       <li class="list__item">
