--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
         </a>
       </li>
       <li class="list__item">
+        <a class="a__f" href="./11-custom-video-player/index.html">
+          11 - Custom Video Player
+        </a>
+      </li>
+      <li class="list__item">
         <a class="a__f" href="./calculator/index.html"> Calculator </a>
       </li>
       <li class="list__item">
